# ga4gh-sidecar-demo

./: Dockerfile  Dockerfile.mock  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
mock_backend/: app.py
src/ga4gh_sidecar/: __init__.py  config.py  main.py  merger.py  proxy.py
src/ga4gh_sidecar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ga4gh_sidecar/plugins/: base.py  tes.py  wes.py
tests/: test_cache_state.py  test_config.py  test_integration.py  test_merger.py  test_plugins.py
